--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -10,7 +10,7 @@ jobs:
   ci:
     name: CI
     runs-on: ubuntu-22.04
-    
+
     strategy:
       fail-fast: false
       matrix:
@@ -18,13 +18,21 @@ jobs:
         
     steps:
       - name: Install LLVM and Clang
-        uses: KyleMayes/install-llvm-action@v2
-        with:
-          version: "18.0"
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y wget gnupg lsb-release
+          wget https://apt.llvm.org/llvm.sh
+          chmod +x llvm.sh
+          sudo ./llvm.sh 18
         
       - name: Checkout
         uses: actions/checkout@v4
-
+      
+      - name: Setup go-task
+        uses: pnorton5432/setup-task@v1
+        with:
+          task-version: 3.29.1
+          
       - name: Setup
         run: |
           task setup BUILD_TYPE=${{ matrix.build-type }}
