--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -17,31 +17,27 @@ jobs:
         build-type: [debug, release]
         
     steps:
-      - name: Install LLVM and Clang
+      - name: Install
         run: |
           sudo apt-get update
           sudo apt-get install -y wget gnupg lsb-release
+          sudo apt-get install -y meson ninja-build
           wget https://apt.llvm.org/llvm.sh
           chmod +x llvm.sh
           sudo ./llvm.sh 18
-          sudo apt-get install -y clang-18 lld-18 llvm-18-dev
           sudo update-alternatives --install /usr/bin/clang clang /usr/bin/clang-18 100
           sudo update-alternatives --install /usr/bin/clang++ clang++ /usr/bin/clang++-18 100
           sudo update-alternatives --install /usr/bin/ld.lld ld.lld /usr/bin/lld-18 100
-      
-      - name: Install Meson, Ninja
-        run: |
-          sudo apt-get install -y meson ninja-build
           
-      - name: Setup go-task
-        uses: pnorton5432/setup-task@v1
+      - name: Install Task
+        uses: arduino/setup-task@v2
         with:
-          task-version: 3.36.0
+          version: 3.x
 
       - name: Checkout
         uses: actions/checkout@v4
           
-      - name: Setup
+      - name: Setup build
         run: |
           task setup BUILD_TYPE=${{ matrix.build-type }}
 
