--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,1 +1,4 @@
 option('build_tests', type : 'feature', value : 'auto')
+
+option('asan', type : 'feature', value : 'auto')
+option('ubsan', type : 'feature', value : 'auto')
