Update CI workflow to include coverage report generation

--- a/Taskfile.dist.yml
+++ b/Taskfile.dist.yml
@@ -20,4 +20,7 @@ tasks:
   test:
     cmds:
       - meson test -C $BUILD_DIR nxx:nxx
+  generate-coverage:
+    cmds:
+      - ninja -C $BUILD_DIR coverage-xml
 
