--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -21,7 +21,9 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y wget gnupg lsb-release
+          sudo apt-get install -y build-essential ccache python3 python3-pip
           sudo apt-get install -y meson ninja-build
+          sudo pip3 install gcovr
           wget https://apt.llvm.org/llvm.sh
           chmod +x llvm.sh
           sudo ./llvm.sh 18
@@ -38,6 +40,12 @@ jobs:
         uses: actions/checkout@v4
           
       - name: Setup build
+        if: ${{ matrix.build-type }} == 'debug'
+        run: |
+          task setup BUILD_TYPE=${{ matrix.build-type }} -- -Db_coverage=true
+          
+      - name: Setup build
+        if: ${{ matrix.build-type }} == 'release'
         run: |
           task setup BUILD_TYPE=${{ matrix.build-type }}
 
@@ -48,3 +56,14 @@ jobs:
       - name: Test
         run: |
           task test
+          
+      - name: Coverage report
+        if: ${{ matrix.build-type }} == 'debug'
+        run: |
+          task generate-coverage
+          
+      - name: Upload coverage reports to Codecov
+        if: ${{ matrix.build-type }} == 'debug'
+        uses: codecov/codecov-action@v4
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
