Update job name in CI workflow
Changed the job name from "test" to "Test and Code Coverage" in the CI workflow file.

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -7,8 +7,8 @@ on:
     branches:
       - main
 jobs:
-  test:
-    name: test
+  test-and-code-coverage:
+    name: Test and Code Coverage
     runs-on: ubuntu-22.04
 
     strategy:
