Add type traits for floating point detection and tests
- Added new header files for type traits related to floating-point detection
- Implemented integral constants and boolean types
- Created functions to check if a type is a floating point in the namespace

--- a/meson.build
+++ b/meson.build
@@ -13,6 +13,9 @@ project(
 )
 
 headers = files(
+    'nxx/nxx/type-trait/details/is-floating-point-impl.hpp',
+    'nxx/nxx/type-trait/integral-constant.hpp',
+    'nxx/nxx/type-trait/is-floating-point.hpp',
     'nxx/nxx/def.hpp'
 )
 
@@ -70,6 +73,7 @@ if build_tests
     catch2_dep = dependency('catch2', fallback: ['catch2', 'catch2_with_main_dep'])
 
     sources_test = files(
+        'nxx/nxx/type-trait/is-floating-point.test.cpp',
         'nxx/nxx/def.test.cpp'
     )
 
