Add algorithm min.hpp, format.hpp, string-view.hpp, format.cpp, and related tests. Implement basic_string_view class with comparison and substring functionality.

--- a/meson.build
+++ b/meson.build
@@ -13,6 +13,7 @@ project(
 )
 
 headers = files(
+    'nxx/nxx/algorithm/min.hpp',
     'nxx/nxx/type-trait/details/add-const-impl.hpp',
     'nxx/nxx/type-trait/details/is-floating-point-impl.hpp',
     'nxx/nxx/type-trait/details/is-same-impl.hpp',
@@ -20,11 +21,13 @@ headers = files(
     'nxx/nxx/type-trait/integral-constant.hpp',
     'nxx/nxx/type-trait/is-floating-point.hpp',
     'nxx/nxx/type-trait/is-same.hpp',
-    'nxx/nxx/def.hpp'
+    'nxx/nxx/def.hpp',
+    'nxx/nxx/format.hpp',
+    'nxx/nxx/string-view.hpp'
 )
 
 sources = files(
-    'nxx/nxx/dummy.cpp'
+    'nxx/nxx/format.cpp'
 )
 
 opt_asan = get_option('asan')
@@ -77,13 +80,16 @@ if build_tests
     catch2_dep = dependency('catch2', fallback: ['catch2', 'catch2_with_main_dep'])
 
     sources_test = files(
+        'nxx/nxx/algorithm/min.test.cpp',
         'nxx/nxx/type-trait/add-const-volatile.test.cpp',
         'nxx/nxx/type-trait/add-const.test.cpp',
         'nxx/nxx/type-trait/add-volatile.test.cpp',
         'nxx/nxx/type-trait/integral-constant.test.cpp',
         'nxx/nxx/type-trait/is-floating-point.test.cpp',
         'nxx/nxx/type-trait/is-same.test.cpp',
-        'nxx/nxx/def.test.cpp'
+        'nxx/nxx/def.test.cpp',
+        'nxx/nxx/format.test.cpp',
+        'nxx/nxx/string-view.test.cpp'
     )
 
     nxx_test = executable(
