Add type-trait tests for is-arithmetic, is-base-of, is-const, is-enum, remove-const-volatile, remove-const, remove-pointer, remove-reference, and remove-volatile.

--- a/meson.build
+++ b/meson.build
@@ -77,12 +77,21 @@ if build_tests
         'nxx/nxx/type-trait/conditional.test.cpp',
         'nxx/nxx/type-trait/decay.test.cpp',
         'nxx/nxx/type-trait/integral-constant.test.cpp',
+        'nxx/nxx/type-trait/is-arithmetic.test.cpp',
+        'nxx/nxx/type-trait/is-base-of.test.cpp',
+        'nxx/nxx/type-trait/is-const.test.cpp',
         'nxx/nxx/type-trait/is-floating-point.test.cpp',
         'nxx/nxx/type-trait/is-integral.test.cpp',
         'nxx/nxx/type-trait/is-enum-class.test.cpp',
+        'nxx/nxx/type-trait/is-enum.test.cpp',
         'nxx/nxx/type-trait/is-same.test.cpp',
         'nxx/nxx/type-trait/is-signed-integer.test.cpp',
         'nxx/nxx/type-trait/is-signed.test.cpp',
+        'nxx/nxx/type-trait/remove-const-volatile.test.cpp',
+        'nxx/nxx/type-trait/remove-const.test.cpp',
+        'nxx/nxx/type-trait/remove-pointer.test.cpp',
+        'nxx/nxx/type-trait/remove-reference.test.cpp',
+        'nxx/nxx/type-trait/remove-volatile.test.cpp',
         'nxx/nxx/def.test.cpp',
         'nxx/nxx/format.test.cpp',
         'nxx/nxx/static-array.test.cpp',
