Add integer sequence utility with tests
Added a new integer sequence utility along with corresponding tests for make_index_sequence and index_sequence_for functionalities.

--- a/meson.build
+++ b/meson.build
@@ -92,6 +92,7 @@ if build_tests
         'nxx/nxx/type-trait/remove-pointer.test.cpp',
         'nxx/nxx/type-trait/remove-reference.test.cpp',
         'nxx/nxx/type-trait/remove-volatile.test.cpp',
+        'nxx/nxx/utility/integer-sequence.test.cpp',
         'nxx/nxx/def.test.cpp',
         'nxx/nxx/format.test.cpp',
         'nxx/nxx/static-array.test.cpp',
