--- a/meson.build
+++ b/meson.build
@@ -67,6 +67,7 @@ if build_tests
 
     tests = files(
         'nxx/nxx/algorithm/min.test.cpp',
+        'nxx/nxx/container/span.test.cpp',
         'nxx/nxx/container/static-array.test.cpp',
         'nxx/nxx/string/format.test.cpp',
         'nxx/nxx/string/string-view.test.cpp',
