Add source_location utility with tests
Added a new source_location utility with functions to retrieve line, column, file name, and function name. Included corresponding test cases.

--- a/meson.build
+++ b/meson.build
@@ -99,6 +99,7 @@ if build_tests
         'nxx/nxx/type-trait/remove-reference.test.cpp',
         'nxx/nxx/type-trait/remove-volatile.test.cpp',
         'nxx/nxx/utility/integer-sequence.test.cpp',
+        'nxx/nxx/utility/source-location.test.cpp',
         'nxx/nxx/def.test.cpp'
     )
 
