--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -10,6 +10,7 @@ jobs:
   test-and-code-coverage:
     name: Test and Code Coverage
     runs-on: ubuntu-22.04
+    container: 3uclid3/nos-buildenv:latest
 
     strategy:
       fail-fast: false
@@ -17,25 +18,6 @@ jobs:
         build-type: [debug, release]
         
     steps:
-      - name: Install
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y wget gnupg lsb-release
-          sudo apt-get install -y build-essential ccache python3 python3-pip
-          sudo apt-get install -y meson ninja-build
-          sudo pip3 install gcovr
-          wget https://apt.llvm.org/llvm.sh
-          chmod +x llvm.sh
-          sudo ./llvm.sh 18
-          sudo update-alternatives --install /usr/bin/clang clang /usr/bin/clang-18 200
-          sudo update-alternatives --install /usr/bin/clang++ clang++ /usr/bin/clang++-18 200
-          sudo update-alternatives --install /usr/bin/ld.lld ld.lld /usr/bin/lld-18 200
-          
-      - name: Install Task
-        uses: arduino/setup-task@v2
-        with:
-          version: 3.x
-
       - name: Checkout
         uses: actions/checkout@v4
           
