--- a/.github/workflows/CodeQL.yml
+++ b/.github/workflows/CodeQL.yml
@@ -14,30 +14,12 @@ jobs:
   analyze:
     name: Analyze
     runs-on: ubuntu-22.04
+    container: 3uclid3/nos-buildenv:latest
 
     permissions:
       security-events: write
 
     steps:
-      - name: Install
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y wget gnupg lsb-release
-          sudo apt-get install -y build-essential ccache python3 python3-pip
-          sudo apt-get install -y meson ninja-build
-          sudo pip3 install gcovr
-          wget https://apt.llvm.org/llvm.sh
-          chmod +x llvm.sh
-          sudo ./llvm.sh 18
-          sudo update-alternatives --install /usr/bin/clang clang /usr/bin/clang-18 200
-          sudo update-alternatives --install /usr/bin/clang++ clang++ /usr/bin/clang++-18 200
-          sudo update-alternatives --install /usr/bin/ld.lld ld.lld /usr/bin/lld-18 200
-          
-      - name: Install Task
-        uses: arduino/setup-task@v2
-        with:
-          version: 3.x
-
       - name: Checkout
         uses: actions/checkout@v4
 
