--- a/meson.build
+++ b/meson.build
@@ -100,6 +100,7 @@ if build_tests
         'nxx/nxx/type-trait/remove-volatile.test.cpp',
         'nxx/nxx/utility/integer-sequence.test.cpp',
         'nxx/nxx/utility/source-location.test.cpp',
+        'nxx/nxx/utility/to-underlying.test.cpp',
         'nxx/nxx/def.test.cpp'
     )
 
