Add memory block functionality and tests - Added a new memory block header file with struct definitions for const_memory_block and memory_block along with comparison, setting, copying, and moving functions. - Included test cases for comparing, setting values, copying data, moving data, and implicit conversion to const_memory_block.

--- a/meson.build
+++ b/meson.build
@@ -69,6 +69,7 @@ if build_tests
         'nxx/nxx/algorithm/min.test.cpp',
         'nxx/nxx/container/span.test.cpp',
         'nxx/nxx/container/static-array.test.cpp',
+        'nxx/nxx/memory/memory-block.test.cpp',
         'nxx/nxx/string/format-to.test.cpp',
         'nxx/nxx/string/format.test.cpp',
         'nxx/nxx/string/string-view.test.cpp',
