--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -3,7 +3,7 @@ version: '3'
 
 env:
   BUILD_TYPE: '{{.BUILD_TYPE | default "debug"}}'
-  BUILD_DIR: 'builddir'
+  BUILD_DIR: 'build'
 
 dotenv: [ '.env' ]
 
