--- a/meson.build
+++ b/meson.build
@@ -69,6 +69,9 @@ if build_tests
         'nxx/nxx/algorithm/min.test.cpp',
         'nxx/nxx/container/span.test.cpp',
         'nxx/nxx/container/static-array.test.cpp',
+        'nxx/nxx/memory/allocator/fallback-allocator.test.cpp',
+        'nxx/nxx/memory/allocator/null-allocator.test.cpp',
+        'nxx/nxx/memory/allocator/stack-allocator.test.cpp',
         'nxx/nxx/memory/memory-block.test.cpp',
         'nxx/nxx/string/format-to.test.cpp',
         'nxx/nxx/string/format.test.cpp',
