Add memory allocation functions and new operators for testing.
- Added memory allocation functions `allocate` and `deallocate`.
- Introduced new operators for memory allocation.

--- a/meson.build
+++ b/meson.build
@@ -68,6 +68,8 @@ if build_tests
     tests = files(
         # utility
         'nxx/nxx/debug/assert-test-impl.cpp',
+        'nxx/nxx/memory/alloc-test-impl.cpp',
+        'nxx/nxx/memory/new-test-impl.cpp',
 
         # tests
         'nxx/nxx/algorithm/min.test.cpp',
