Add new memory management functions and type traits for static arrays
 - added `construct_at` and `destroy_at` functions
 - added with a new type trait `is_static_array`

--- a/meson.build
+++ b/meson.build
@@ -95,6 +95,7 @@ if build_tests
         'nxx/nxx/memory/allocator/fallback-allocator.test.cpp',
         'nxx/nxx/memory/allocator/null-allocator.test.cpp',
         'nxx/nxx/memory/allocator/stack-allocator.test.cpp',
+        'nxx/nxx/memory/construct-at.test.cpp',
         'nxx/nxx/memory/memory-block.test.cpp',
         'nxx/nxx/memory/unique-ptr.test.cpp',
         'nxx/nxx/string/format-to.test.cpp',
@@ -121,6 +122,7 @@ if build_tests
         'nxx/nxx/type-trait/is-same.test.cpp',
         'nxx/nxx/type-trait/is-signed-integer.test.cpp',
         'nxx/nxx/type-trait/is-signed.test.cpp',
+        'nxx/nxx/type-trait/is-static-array.test.cpp',
         'nxx/nxx/type-trait/remove-const-volatile.test.cpp',
         'nxx/nxx/type-trait/remove-const.test.cpp',
         'nxx/nxx/type-trait/remove-pointer.test.cpp',
