Add alignment functions and type traits for signed and unsigned integers
- Added alignment functions align_down and align_up in the memory/alignment.hpp file
- Implemented tests for the new alignment functions in alignment.test.cpp
- Created type traits make_signed and make_unsigned for integral types

--- a/meson.build
+++ b/meson.build
@@ -95,6 +95,7 @@ if build_tests
         'nxx/nxx/memory/allocator/fallback_allocator.test.cpp',
         'nxx/nxx/memory/allocator/null_allocator.test.cpp',
         'nxx/nxx/memory/allocator/stack_allocator.test.cpp',
+        'nxx/nxx/memory/alignment.test.cpp',
         'nxx/nxx/memory/construct_at.test.cpp',
         'nxx/nxx/memory/memory_block.test.cpp',
         'nxx/nxx/memory/unique_ptr.test.cpp',
