Add ntl dependency to nxx and include ntl in def.hpp.
- Added ntl dependency to the project build.
- Included ntl in def.hpp for namespace usage.

--- a/meson.build
+++ b/meson.build
@@ -57,12 +57,14 @@ nxx = static_library(
     sources,
     install : false,
     include_directories : ['nxx'],
+    dependencies : [dependency('ntl')],
     c_args : ['-ffreestanding', sanitizers, macros],
     cpp_args : ['-ffreestanding', sanitizers, macros]
 )
 
 nxx_dep  = declare_dependency(
    link_with : nxx,
+   dependencies : [dependency('ntl')],
    sources : sources,
    include_directories : ['nxx']
 )
