Add slab allocator
Introduce a new slab allocator for managing memory efficiently by allocating and deallocating objects based on predefined slab sizes.
This allows for optimized handling of memory blocks within the specified size ranges.

--- a/meson.build
+++ b/meson.build
@@ -97,6 +97,7 @@ if build_tests
         'nxx/nxx/container/static_array.test.cpp',
         'nxx/nxx/memory/allocator/fallback_allocator.test.cpp',
         'nxx/nxx/memory/allocator/null_allocator.test.cpp',
+        'nxx/nxx/memory/allocator/slab_allocator.test.cpp',
         'nxx/nxx/memory/allocator/stack_allocator.test.cpp',
         'nxx/nxx/memory/alignment.test.cpp',
         'nxx/nxx/memory/construct_at.test.cpp',
