--- a/codecov.yml
+++ b/codecov.yml
@@ -1,19 +1,20 @@
 ---
 ignore:
-  - "**/*.test.cpp"
+  - "subprojects/**"
+  - "tests/**"
 coverage:
   status:
     project:
       default:
         target: 90%
-        threshold: 0%
+        threshold: 10%
         base: auto
         paths:
           - "nxx/nxx/"
     patch:
       default:
         target: 90%
-        threshold: 0%
+        threshold: 10%
         base: auto
         paths:
           - "nxx/nxx/"
