Refactor slab_allocator to new api

--- a/tests/nxx/meson.build
+++ b/tests/nxx/meson.build
@@ -23,7 +23,7 @@ tests = files(
     'memory/allocator/allocator_traits.test.cpp',
     'memory/allocator/fallback_allocator.test.cpp',
     'memory/allocator/null_allocator.test.cpp',
-    #'memory/allocator/slab_allocator.test.cpp',
+    'memory/allocator/slab_allocator.test.cpp',
     'memory/allocator/stack_allocator.test.cpp',
     'memory/alignment.test.cpp',
     'memory/construct_at.test.cpp',
