Moved cstring to string/utility.hpp or memory/utility.hpp
Updated includes and tests accordingly.
Added utility functions for string manipulation.

--- a/tests/nxx/meson.build
+++ b/tests/nxx/meson.build
@@ -29,10 +29,12 @@ tests = files(
     'memory/construct_at.test.cpp',
     'memory/memory_block.test.cpp',
     'memory/unique_ptr.test.cpp',
+    'memory/utility.test.cpp',
     'string/format_to.test.cpp',
     'string/format.test.cpp',
     'string/string_view.test.cpp',
     'string/to_string_view.test.cpp',
+    'string/utility.test.cpp',
     'type_trait/macro/declare_has_method.macro.test.cpp',
     'type_trait/add_const_volatile.test.cpp',
     'type_trait/add_const.test.cpp',
