Added array class with basic operation

--- a/nxx/nxx/meson.build
+++ b/nxx/nxx/meson.build
@@ -1,4 +1,5 @@
 sources += files(
+    'container/details/array_data.cpp',
     'memory/new.cpp',
     'memory/utility.cpp',
     'string/format.cpp'
