--- a/tests/nxx/meson.build
+++ b/tests/nxx/meson.build
@@ -17,6 +17,10 @@ tests = files(
     'algorithm/none_of.test.cpp',
     'algorithm/none.test.cpp',
     'debug/assert.test.cpp',
+    'container/details/array_base.test.cpp',
+    'container/details/array_object.test.cpp',
+    'container/details/array_trivial.test.cpp',
+    'container/array.test.cpp',
     'container/bitmap.test.cpp',
     'container/span.test.cpp',
     'container/static_array.test.cpp',
