Improved how new is exposed
Removed unnecessary macros for build tests and updated operator new functions in memory files.

--- a/nxx/nxx/meson.build
+++ b/nxx/nxx/meson.build
@@ -1,6 +1,11 @@
 sources += files(
     'container/details/array_data.cpp',
-    'memory/new.cpp',
     'memory/utility.cpp',
     'string/format.cpp'
 )
+
+if not build_tests
+    sources += files(
+        'memory/new.cpp',
+    )
+endif
