--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -4,18 +4,19 @@ version: '3'
 env:
   BUILD_TYPE: '{{.BUILD_TYPE | default "debug"}}'
   BUILD_DIR: 'build'
-  GCC_VERSION: '13'
-  LLVM_VERSION: '18'
 
 dotenv: [ '.env' ]
 
 tasks:
-  setup:gcc:
+  setup:gcc-13:
     cmds:
-      - meson setup {{.BUILD_DIR}} --buildtype {{.BUILD_TYPE}} --native-file native_file/{{OS}}-gcc-{{.GCC_VERSION}}.native_file {{.CLI_ARGS}} 
-  setup:llvm:
+      - meson setup {{.BUILD_DIR}} --buildtype {{.BUILD_TYPE}} --native-file native_file/{{OS}}-gcc-13.native_file {{.CLI_ARGS}} 
+  setup:gcc-14:
     cmds:
-      - meson setup {{.BUILD_DIR}} --buildtype {{.BUILD_TYPE}} --native-file native_file/{{OS}}-llvm-{{.LLVM_VERSION}}.native_file {{.CLI_ARGS}}
+      - meson setup {{.BUILD_DIR}} --buildtype {{.BUILD_TYPE}} --native-file native_file/{{OS}}-gcc-14.native_file {{.CLI_ARGS}} 
+  setup:llvm-18:
+    cmds:
+      - meson setup {{.BUILD_DIR}} --buildtype {{.BUILD_TYPE}} --native-file native_file/{{OS}}-llvm-18.native_file {{.CLI_ARGS}}
 
   compile:
     cmds:
@@ -25,7 +26,7 @@ tasks:
     cmds:
       - meson test -v -C {{.BUILD_DIR}}
 
-  generate-coverage:
+  coverage:
     cmds:
       - ninja -C {{.BUILD_DIR}} coverage
 
