Update Codecov target coverage to 75% and add flags for unittests and compiler matrix. Ignore build directory in Codecov configuration.

--- a/codecov.yml
+++ b/codecov.yml
@@ -1,19 +1,20 @@
 ---
 ignore:
+  - "build/**"
   - "subprojects/**"
   - "tests/**"
 coverage:
   status:
     project:
       default:
-        target: 90%
+        target: 75%
         threshold: 10%
         base: auto
         paths:
           - "nxx/nxx/"
     patch:
       default:
-        target: 90%
+        target: 75%
         threshold: 10%
         base: auto
         paths:
