--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -42,7 +42,8 @@ jobs:
         uses: codecov/codecov-action@v4
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-  
+          flags: unittests, ${{ matrix.compiler }}
+
   test-release:
     name: Test Release
     runs-on: ubuntu-22.04
